test/spec_vectors/simd_lane/ok/module_149.wat
(module (func (result i32) (i16x8.extract_lane_s 7 (v128.const i16x8 0 0 0 0 0 0 0 0))))